(library
 (name ATDGenerated)
 (public_name olirvu.ATDGenerated)
 (flags
  (:standard -w -27-32-34-35-39))
 (libraries atdgen core)
 (preprocess
  (pps ppx_compare ppx_make)))

; ATD for quant_markers

(rule
 (targets quantization_t.ml quantization_t.mli)
 (deps quantization.atd)
 (action
  (run atdgen -t -deriving-conv make %{deps})))

(rule
 (targets quantization_j.ml quantization_j.mli)
 (deps quantization.atd)
 (action
  (run atdgen -open !AtdDeps -deriving-conv equal -j -j-std %{deps})))
